# MachineLearning

./: .gitignore  CMakeLists.txt  Commun.h  api.cpp  api.h  export.h  test_main.cpp
API/: API.cpp  API.h
Model/: Model.cpp  Model.h  ModelLinear.cpp  ModelLinear.h  ModelManager.cpp  ModelManager.h  ModelMultiCouches.cpp  ModelMultiCouches.h  ModelMultiLayers.cpp  ModelMultiLayers.h  RBFNaive.cpp  RBFNaive.h
